k3s-userapps/readur/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readur
  namespace: readur
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/pod: readur
  type: ClusterIP
